Solve hero layout shift

--- a/css/styles.css
+++ b/css/styles.css
@@ -1347,6 +1347,7 @@ ul.list li::before {
 }
 .hero__left-panel {
   display: flex;
+  flex: 1 1 fit-content;
   flex-direction: column;
   align-items: center;
   justify-content: center;
